src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Design_Process_Status__c</fullName>
        <label>Design Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deign Sent for Approval</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Design Approved</fullName>
                </value>
                <value>
                    <fullName>Design Rejected</fullName>
                </value>
                <value>
                    <fullName>Parts Available</fullName>
                </value>
                <value>
                    <fullName>Parts Not Available</fullName>
                </value>
                <value>
                    <fullName>Parts Added</fullName>
                </value>
                <value>
                    <fullName>Parts Not Added</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engine</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Engine</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Engine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhaust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exhaust</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Exhaust</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Exhaust)</relationshipLabel>
        <relationshipName>Exhaust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gauge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gauge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Gauge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Gauge)</relationshipLabel>
        <relationshipName>Gauge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_Light__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head Light</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Head Light</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Head Light)</relationshipLabel>
        <relationshipName>Head_Light</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Document_Id__c</fullName>
        <label>Image Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot;+ Image_Document_Id__c , &quot;Image not available&quot; , 200, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoOrSticker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LogoOrSticker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>LogoOrSticker</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (LogoOrSticker)</relationshipLabel>
        <relationshipName>LogoOrSticker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mirror</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Mirrors</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Mirror)</relationshipLabel>
        <relationshipName>Mirror</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tail_Light__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tail Light</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Rear Light</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Tail Light)</relationshipLabel>
        <relationshipName>Tail_Light</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turn_Signal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Turn Signal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Turn Signal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Turn Signal)</relationshipLabel>
        <relationshipName>Turn_Signal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wheel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wheel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Wheel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Wheel)</relationshipLabel>
        <relationshipName>Wheel</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Accessory</fullName>
        <active>true</active>
        <label>Accessory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Bike</fullName>
        <active>true</active>
        <label>Custom Bike</label>
    </recordTypes>
</CustomObject>